# swagger.json
@@ -174,6 +174,50 @@
         ]
       }
     },
+    "/museum/tape":{
+      "get": {
+        "tags": [
+          "Museum"
+        ],
+        "summary": "Get museums in tape",
+        "description": "Returns a list of museums descriptions in set tape",
+        "operationId": "getTapeMuseums",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "FirstMuseum",
+            "in": "query",
+            "description": "Index of the first museum to be shown (from 0)",
+            "required": false,
+            "type": "integer",
+            "format": "int64"
+          },
+          {
+            "name": "LastMuseum",
+            "in": "query",
+            "description": "Index of the last museum to be shown (including)",
+            "required": false,
+            "type": "integer",
+            "format": "int64"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "successful operation",
+            "schema": {
+              "$ref": "#/definitions/ApiResponse"
+            }
+          }
+        },
+        "security": [
+          {
+            "auth_env": []
+          }
+        ]
+      }
+    },
     "/museum/all": {
       "get": {
         "tags": [
